--- a/client/app-project/package.json
+++ b/client/app-project/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@stripe/stripe-js": "^1.21.1",
     "bootstrap": "5.1.2",
+    "ngx-paypal": "^8.0.0",
+    "ngx-stripe": "^13.0.0",
     "ngx-toastr": "^14.1.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
